--- a/pages/events.html
+++ b/pages/events.html
@@ -1,7 +1,19 @@
-<template>
-    <div class="container-fluid">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Events</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+    <div class="container-fluid"> 
         <div class="row">
-            <div class="col-2 col-sm-2 col-lg-2 pe-0">
+
+            <!-- side bar -->
+            <div class="col-2 col-sm-2 col-lg-2">
                 <div class="left-navbar d-flex flex-column border-end position-sticky" style="height:100vh; align-items: center;" id="left-navbar">
                     <div>
                         <!-- APP_ICON Replace with app image  -->
@@ -65,65 +77,70 @@
                         @tanxx
                     </p>
 
+                
                 </div>
-
             </div>
+
+            <!-- main right side -->
             <div class="col-10 col-sm-10 col-lg-10">
                 <div class="row align-items-center mt-3">
-                    <!-- Chats Row ()-->
                     <div class="col">
-                        <strong class="fs-4">Chats</strong>
+                        <strong class="fs-4">Events</strong>
                     </div>
-                    <!-- If bell column is needed.. -->
-                    <!-- <div class="col text-end">
-                        <i class="fa-solid fa-bell"></i>
-                    </div> -->
                 </div>
-                <!-- Search bar for chats -->
                 <div class="row align-items-center mt-3">
                     <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search for Chats" aria-label="Search">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search for People/Events" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
-
                 <div class="row align-items-center mt-3">
-                    <!-- stretch chat to take up whole row -->
-                    <div class="col-12 p-0">
-                        <div class="jumbotron bg-dark text-white px-5 m-0">
-                            <div class="row">
-                                <!-- picture on left, chat etc on right -->
-                                <div class="col-1 my-auto ps-0">
-                                    <img src="https://placekitten.com/55/55" style="border-radius: 50%;">
-                                </div>
-                                <div class="col-11 ps-3">
-                                    <div class="d-inline">
-                                        Tan Ah Lian @xmm123 - 10/10/2022
-                                    </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </div>
+
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-4 mt-3 me-3">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="https://placekitten.com/100/70/" alt="Image of event" id="event_pic">
+                            <div class="card-body">
+                              <h5 class="card-title" id="event_name">Recruiting for Tic Tac Toe Hackathon</h5>
+                              <p class="card-text" id="lister_name">Tan Ah Meng</p>
+                              <p class="card-text" id="event_details">Looking for 1 more person to join our team. More details...</p>
+                              <p class="card-text" id="event_date">Listed on 10/10/2022</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row align-items-center">
-                    <!-- stretch chat to take up whole row -->
-                    <div class="col-12 p-0">
-                        <div class="jumbotron bg-dark text-white px-5 m-0">
-                            <div class="row">
-                                <!-- picture on left, chat etc on right -->
-                                <div class="col-1 my-auto ps-0">
-                                    <img src="https://placekitten.com/55/55" style="border-radius: 50%;">
-                                </div>
-                                <div class="col-11 ps-3">
-                                    <div class="d-inline">
-                                        Tan Ah Beng @beng123 - 14/9/2022
-                                    </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </div>
+
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-4 mt-3 me-3">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="https://placekitten.com/100/70/" alt="Image of event" id="event_pic2">
+                            <div class="card-body">
+                              <h5 class="card-title" id="event_name2">Recruiting for Toe Tac Tic Hackathon</h5>
+                              <p class="card-text" id="lister_name2">Tan Ah Chew</p>
+                              <p class="card-text" id="event_details2">Looking for 3 more people to join our team. More details...</p>
+                              <p class="card-text" id="event_date2">Listed on 20/10/2022</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-4 mt-3 me-3">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="https://placekitten.com/100/70/" alt="Image of event" id="event_pic2">
+                            <div class="card-body">
+                              <h5 class="card-title" id="event_name2">Recruiting for Shopee Internship</h5>
+                              <p class="card-text" id="lister_name2">John Lee</p>
+                              <p class="card-text" id="event_details2">Looking for 3 more people to join our team. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus corrupti quaerat eligendi sint. Mollitia, id repellat. Molestias, dolore. Suscipit nulla architecto aspernatur beatae odio adipisci provident. At ullam iste quam!</p>
+                              <p class="card-text" id="event_date2">Listed on 17/10/2022</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
+
+
             </div>
-</template>
+
+        </div>
+    </div>
+</body>
+</html>
