--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Fling</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        @media only screen and (max-width: 844px) {
+            .nav-title {
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -28,6 +36,7 @@
                             <a href="main.html">
                                 <i class="fa-solid fa-house-user fs-3" ></i>
                             </a>
+                            <h5 class="nav-title">Home</h5>
                         </button>
                     </div>
                     
@@ -37,6 +46,7 @@
                             <a href="events.html">
                                 <i class="fa-solid fa-calendar-days fs-3"></i>
                             </a>
+                            <h5 class="nav-title">Events</h5>
                         </button>
                     </div>
 
@@ -47,6 +57,7 @@
                             <a href="chats.html">
                                 <i class="fa-solid fa-message fs-3"></i>
                             </a>
+                            <h5 class="nav-title">Chat</h5>
                         </button>
                     </div>
 
@@ -57,6 +68,7 @@
                             <a href="profilepage.html">
                                 <i class="fa-solid fa-user fs-3"></i>
                             </a>
+                            <h5 class="nav-title">Profile</h5>
                         </button>
                     </div>
                     
