1. able to upload images from user input into firebase storage 2. added bio and school input into profilepic.vue template

--- a/pages/profilepage.html
+++ b/pages/profilepage.html
@@ -88,16 +88,27 @@
                 <div class="row">
                     <div class="profile-text px-5 py-3 clearfix">
                         <div class="profile-name clearfix">
-                            <span id="name" class="display-6">Tan Ah Meng</span>
-                            <button type="button" class="btn btn-outline-primary rounded-pill" style="float: right;">Edit profile</button>
+                            <span id="name" class="display-6">
+                                Tan Ah Meng
+                            </span>
+                            <button type="button" class="btn btn-outline-primary rounded-pill" style="float: right;">
+                                Edit profile
+                            </button>
                         </div>
-                        <span id="username" class="pb-2 text-secondary"><h6>@tanxx</h6></span>
-                        <button type="button" class="btn btn-outline-secondary rounded-pill">Cybersecurity</button>
-                        <button type="button" class="btn btn-outline-secondary rounded-pill">AI</button>
+                        <span id="username" class="pb-2 text-secondary">
+                            <h6>
+                                @tanxx
+                            </h6>
+                        </span>
+                        <span class="border border-secondary text-secondary rounded-pill p-2">
+                            Cybersecurity
+                        </span>
+                        <span class="border border-secondary text-secondary rounded-pill p-2">
+                            Artificial Intelligence
+                        </span>
                     </div>
                 </div> 
                 
-
                 <!--for events-->
                 <hr>
 
